--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "allotment": "^1.20.3",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "zustand": "^4.5.2"
   },
@@ -21,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "antd": "^5.26.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
