--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "allotment": "^1.20.3",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "style-to-object": "^1.0.9",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.7.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
