--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "allotment": "^1.20.3",
+    "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
